--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
+  "name": "omma-watson-api",
+  "version": "1.0.0",
+  "private": true,
+  "author": "Junho Yeo <i@junho.io>",
+  "git": "https://github.com/omma-watson/omma-watson-api.git",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "format": "prettier --write ."
+  },
   "dependencies": {
     "@langchain/community": "^0.2.25",
     "@langchain/core": "^0.2.22",
     "@vercel/postgres": "^0.9.0",
-    "langchain": "^0.2.13"
+    "langchain": "^0.2.13",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "tsx": "^4.17.0"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/react": "18.3.3",
+    "prettier": "^3.3.3",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4"
   }
 }
