--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@langchain/community": "^0.2.25",
     "@langchain/core": "^0.2.22",
+    "@vercel/kv": "^2.0.0",
     "@vercel/postgres": "^0.9.0",
     "langchain": "^0.2.13",
     "next": "^14.2.5",
